# fealpy

./: '  .bumpversion.cfg  .gitignore  :w  BiharmonicAdaptive.py  CMakeLists.txt  COPYRIGHT.txt  Contribution.md  Develop_note.md  Dockerfile  Git使用规范与commit整理指南.md  GradientDesentAlg.py  MANIFEST.in  NonlinearConjugateGradientAlg.py  Pipfile  README.md  TODO.md  biharmonic_trianglemesh_lfem_dirichletbc.py  citation.bib  hu_zhang_fem_space.py  install.py  install_error.md  params_quad_p1_model1_disp.txt  params_tri_p1_model1_disp.txt  plan.md  pytest.ini  requirements-full.txt  requirements.txt  setup.py  setup_linux.py  setup_linux_with_extent.py  setup_mac.py  setup_win.py  tags  test.py  test.txt  test2.txt  test7.30.py  test_uniformMesh2d.py  testresult.md  (+2 more)
.fealpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
app/: adaptiveNedec.py  test_harmonic.py  timeharmonic_2d.py
application/: constrained_conforming_delaunay.py  data-9.py  feng.py  lagrange_basis_test.py  mesh2d.m  mesh_MengChen.m  readdicom.py  readdicom_vtk.py  scftplot.py  scftplt.py  stefan.py  stokes.py  test.sh  triangle_test.py
data/: 3_circle_test.vtk  3_circle_test_opt.vtk  ballmesh.vtk  doubletorus.mat  fourquad.vtk  fourquad_opt.vtk  foutquad_opt.vtk  girl.m  hole_in_square_opt.vtk  initialmesh-fixed-part.vtk  initialmesh-fixed.vtk  initialmesh.vtk  orthocircle5482.mat  shashkov.vtk  twotets.vtk  vtkreader.py
demo/: distmesh2d_demo.py  distmesh3d_demo.py  mesh_vtk_demo.py  plot_lagrange_basis.py  quadtree_demo.py  surfacemesh.py
doc/: CODT.ipynb  FEM.docx  FEM.ipynb  FEM.md  Python3-lecture.ipynb  Surface_fem.ipynb  Test.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  exmaple.md  high_order_simplex_fem.ipynb  lagrangian_basis.ipynb  matplotlib  numpy.md  python3-study-note.ipynb  python3.md  shunnpts2.m  shunnpts3.m  software  stefan.ipynb  test.md  分子表面网格生成与优化.md  生物大分子.ipynb  魏华祎汇报.docx  魏华祎软件汇报.pptx
docs/: .gitignore  CNAME  Gemfile  README.md  SUMMARY.md  _Gemfile  _config.yml  _index.md  index.md  mathjax.md
example/: AD.npz  ADI.py  AFEM_1d_texs1.py  Bihamonic.py  Biharmonic.py  Biharmonic1.py  BiharmonicAFEMRate.py  BiharmonicAdaptive.py  BiharmonicAdaptive1.py  BiharmonicFEMEigenRate.py  BiharmonicFEMRate.py  BihmonicDelaunay.py  CVTPMesher_example.py  CahnHilliardRFEM.py  Call_test.py  ContinummDFModel2d.py  ContinuumDF2d_example.py  ConvectinDiffusionReactionFEMwithDirichletBC2d_example.py  CylinderNavierStokesFEM2d_IPCS.py  DFP0P1mg.py  DRLevelSetFDM2d_example.py  Darcy2dFDMRate.py  DarcyForchheimer2dFDMNuRate.py  DarcyForchheimer2dFDMRate.py  DarcyForchheimerAdaptive.py  EMWaveFDTD1d_example.py  EMWaveFDTD2d_example.py  EMWaveFDTD3d_example.py  EMWaveFDTDWithPML2d_example.py  EMWaveFDTDWithPML3d_example.py  EMWaveFDTDWithUPML2d_example.py  EMWaveFDTDWithUPML3d_example.py  FastSweepingMethod2d_example.py  FourPoissonDG.py  FourthOrderEllipticDG2D_example.py  HalfEdgeMesh2d_example.py  HeatEqautionFEM2d_example.py  HeatEquationAFEM2d_example.py  HeatEquationFEM_example.py  HelmholtzFEM2d_example.py  (+147 more)
exten/: CMakeLists.txt
exten/HelloWorld/: CMakeLists.txt  hello.cpp
exten/boostpy/: CMakeLists.txt  README.py  boostpy.cpp
exten/cgal/: AFT_triangle_mesh_generator_2.h  Anisotropic_kernel.h  Anisotropic_type.h  CMakeLists.txt  Constrained_triangulation_face_base_with_blind_mark_2.h  Delaunay_triangulation_2.h  Domain_2.h  Functor_base_2.h  Metric_field_2.h  Metric_field_base_2.h  Triangulation_vertex_base_with_type_2.h
exten/cgal/test/: CMakeLists.txt  cgal_demo.cpp  curve_intersections_test.cpp  mesh_class.cpp
exten/fealc++/: CMakeLists.txt
exten/fealc++/example/: Interface2d.cpp  Interface3d.cpp
exten/fealc++/include/: Interface_fitted_mesh_alg_2.h  Interface_fitted_mesh_alg_3.h  Mesh.h  Mesh_generation_alg.h  Structure_mesh_alg.h
exten/fealc++/include/Geometry/: Bisection_alg.h  Box.h  Delaunay_alg_2.h  Geometry_kernel.h  Hexahedron.h  Level_set_function.h  Origin.h  PPoint.h  Point.h  Tetrahedron.h  Vector.h
exten/fealc++/include/Geometry/CGAL/: Triangulation_vertex_with_id_2.h
exten/fealc++/test/: CMakeLists.txt
exten/fealm/: Function.m  LagrangeFiniteElementSpace.m  Mesh.m  MeshDataStructure.m  Quadrature.m  README.md  SpherePFCModelData.m  SphereSurface.m  Surface.m  SurfacePFCFEMModel.m  TriangleMesh.m  TriangleMeshDataStructure.m  TriangleQuadrature.m  UniformTimeLine.m  showmesh.m  showsolution.m  test_sphere_model.m
exten/fealm/mesh/: Mesh3d.m  Mesh3dDataStructure.m  MeshIO.m  TetrahedronMesh.m  TetrahedronMeshDataStructure.m  Untitled Document  test_tetrahedronmesh.m
exten/geogram/: CMakeLists.txt
exten/geogram/test/: CMakeLists.txt  CVTMesh.cpp  GLUP_basic_example.cpp  cvt_app.cpp  cvtopt_2d_glup_app.cpp  demo_app.cpp  domain_2d_glup_demo.cpp  lloyd.cpp  opengl.cmake
exten/imath/: CMakeLists.txt
exten/imath/example/: CMakeLists.txt
exten/imath/include/: BSRMatrix.h  CMakeLists.txt  CSRMatrix.h  NDArray.h  Vector.h  backup.cpp  solver.cpp  solver_test.m  split.h  test.m  tridivide.cpp  tridivide.mexa64  type.h
exten/imath/test/: CMakeLists.txt  test_csr_matrix.cpp
exten/p4est/: CMakeLists.txt
exten/p4est/test/: CMakeLists.txt  hello_p4est.cpp
exten/pymetis/: CMakeLists.txt  pymetis.cpp
exten/pymoab/: CMakeLists.txt  pymoab.cpp
exten/pyparmetis/: CMakeLists.txt  pyparmetis.cpp
exten/tdquadrule/: CMakeLists.txt  tdquadrule.cpp  tdquadrule.hpp
external_deps/: __init__.py  builder.py  cec.py  config.json  cuda.py  mumps.py  openblas.py  p4est.py  pangulu.py  source_downloader.py
fealpy/: __init__.py  functional.py  logs.py  test1.py  typing.py  utils.py
mego/: TriRadiusRatio.py  fealpy  test_parallel_mesh_coloring.py  test_parallel_mesh_coloring_1.py  test_triopt.py
notebook/: fealpy.ipynb  high_order_mesh.ipynb  jax.ipynb  lfem.ipynb  (+5 more)
src/detri2/: CMakeLists.txt  README.md  adapt.cpp  constrained.cpp  delaunay.cpp  detri2.cpp  detri2.h  detri2_call.cpp  flipgraph.cpp  flips.cpp  io.cpp  main.cpp  meshadapt.cpp  metric.cpp  pred3d.cpp  pybind11.cpp  refine.cpp  sort.cpp  voronoi.cpp
(+5662 files in other folders)
